--- a/View/Riwayat_Mengaji/RiwayatMengaji.xaml
+++ b/View/Riwayat_Mengaji/RiwayatMengaji.xaml
@@ -9,14 +9,14 @@
                                         <Image Source="ustadz.png" WidthRequest="60" Margin="0,0,12,0" HeightRequest="60" />
                                         <VerticalStackLayout>
                                                 <StackLayout Margin="0,0,0,10">
-                                                        <Label Text="Dalene Robertson" FontFamily="Nunito" FontSize="18"
+                                                        <Label  Text="Dalene Robertson" FontFamily="Nunito" FontSize="18"
                                                                 FontAttributes="Bold" />
                                                         <Label Text="Selesai Mengaji" FontFamily="Nunito" FontSize="14" />
                                                 </StackLayout>
                                                 <Label Text="Sabtu, 3 Apr 2021  •  13:00 PM " FontFamily="Nunito"
                                                         TextColor="#88984A" />
                                         </VerticalStackLayout>
-                                        <Image Source="icon.svg" />
+                                        <ImageButton Source="icon.svg" WidthRequest="15" HeightRequest="15"/>
                                 </HorizontalStackLayout>
                                 <HorizontalStackLayout Margin="0,0,0,28">
                                         <Image Source="ustadz.png" WidthRequest="60" Margin="0,0,12,0" HeightRequest="60" />
@@ -29,7 +29,8 @@
                                                 <Label Text="Sabtu, 3 Apr 2021  •  13:00 PM " FontFamily="Nunito"
                                                         TextColor="#88984A" />
                                         </VerticalStackLayout>
-                                        <Image Source="icon.svg" />
+                                        
+                                        <ImageButton Source="icon.svg" WidthRequest="15" HeightRequest="15"/>
                                 </HorizontalStackLayout>
                                 <HorizontalStackLayout Margin="0,0,0,28">
                                         <Image Source="ustadz.png" WidthRequest="60" HeightRequest="60"  Margin="0,0,12,0" />
@@ -42,7 +43,8 @@
                                                 <Label Text="Sabtu, 3 Apr 2021  •  13:00 PM " FontFamily="Nunito"
                                                         TextColor="#C0C0C0"/>
                                         </VerticalStackLayout>
-                                        <Image Source="icon.svg"/>
+                                        
+                                        <ImageButton Source="icon.svg" WidthRequest="15" HeightRequest="15"/>
                                 </HorizontalStackLayout>
                                 <HorizontalStackLayout Margin="0,0,0,28">
                                         <Image Source="ustadz.png" WidthRequest="60" Margin="0,0,12,0" HeightRequest="60" />
@@ -55,7 +57,7 @@
                                                 <Label Text="Sabtu, 3 Apr 2021  •  13:00 PM " FontFamily="Nunito"
                                                         TextColor="#88984A" />
                                         </VerticalStackLayout>
-                                        <Image Source="icon.svg" />
+                                        <ImageButton Source="icon.svg" WidthRequest="15" HeightRequest="15"/>
                                 </HorizontalStackLayout>
                 <Button Text="Kembali" BackgroundColor="#FFD53F" FontFamily="NunitoBlack" WidthRequest="300" TextColor="#313131" HeightRequest="56" FontSize="18" CornerRadius="50" HorizontalOptions="Fill" VerticalOptions="Center" Margin="0,28,0,28"/>
                 </VerticalStackLayout>
