--- a/View/Riwayat_Mengaji/RiwayatMengaji.xaml
+++ b/View/Riwayat_Mengaji/RiwayatMengaji.xaml
@@ -33,7 +33,7 @@
                                         <ImageButton Source="icon.svg" WidthRequest="15" HeightRequest="15"/>
                                 </HorizontalStackLayout>
                                 <HorizontalStackLayout Margin="0,0,0,28">
-                                        <Image Source="ustadz.png" WidthRequest="60" HeightRequest="60"  Margin="0,0,12,0" />
+                                        <Image Source="ustadz.png" Opacity="0.5" WidthRequest="60" HeightRequest="60"  Margin="0,0,12,0" />
                                         <VerticalStackLayout>
                                                 <StackLayout Margin="0,0,0,10">
                                                         <Label Text="Dalene Robertson" FontFamily="Nunito" FontSize="18"
@@ -42,123 +42,6 @@
                                                 </StackLayout>
                                                 <Label Text="Sabtu, 3 Apr 2021  •  13:00 PM " FontFamily="Nunito"
                                                         TextColor="#C0C0C0"/>
-                                        </VerticalStackLayout>
-                                        <ImageButton Source="icon.svg" WidthRequest="15" HeightRequest="15"/>
-                                </HorizontalStackLayout>
-                                <HorizontalStackLayout Margin="0,0,0,28">
-                                        <Image Source="ustadz.png" WidthRequest="60" Margin="0,0,12,0" HeightRequest="60" />
-                                        <VerticalStackLayout>
-                                                <StackLayout Margin="0,0,0,10">
-                                                        <Label Text="Dalene Robertson" FontFamily="Nunito" FontSize="18"
-                                                                FontAttributes="Bold" />
-                                                        <Label Text="Selesai Mengaji" FontFamily="Nunito" FontSize="14" />
-                                                </StackLayout>
-                                                <Label Text="Sabtu, 3 Apr 2021  •  13:00 PM " FontFamily="Nunito"
-                                                        TextColor="#88984A" />
-                                        </VerticalStackLayout>
-                                        <ImageButton Source="icon.svg" WidthRequest="15" HeightRequest="15"/>
-                                </HorizontalStackLayout>
-                                <HorizontalStackLayout Margin="0,0,0,28">
-                                        <Image Source="ustadz.png" WidthRequest="60" Margin="0,0,12,0" HeightRequest="60" />
-                                        <VerticalStackLayout>
-                                                <StackLayout Margin="0,0,0,10">
-                                                        <Label Text="Dalene Robertson" FontFamily="Nunito" FontSize="18"
-                                                                FontAttributes="Bold" />
-                                                        <Label Text="Selesai Mengaji" FontFamily="Nunito" FontSize="14" />
-                                                </StackLayout>
-                                                <Label Text="Sabtu, 3 Apr 2021  •  13:00 PM " FontFamily="Nunito"
-                                                        TextColor="#88984A" />
-                                        </VerticalStackLayout>
-                                        <ImageButton Source="icon.svg" WidthRequest="15" HeightRequest="15"/>
-                                </HorizontalStackLayout>
-                                <HorizontalStackLayout Margin="0,0,0,28">
-                                        <Image Source="ustadz.png" WidthRequest="60" Margin="0,0,12,0" HeightRequest="60" />
-                                        <VerticalStackLayout>
-                                                <StackLayout Margin="0,0,0,10">
-                                                        <Label Text="Dalene Robertson" FontFamily="Nunito" FontSize="18"
-                                                                FontAttributes="Bold" />
-                                                        <Label Text="Selesai Mengaji" FontFamily="Nunito" FontSize="14" />
-                                                </StackLayout>
-                                                <Label Text="Sabtu, 3 Apr 2021  •  13:00 PM " FontFamily="Nunito"
-                                                        TextColor="#88984A" />
-                                        </VerticalStackLayout>
-                                        <ImageButton Source="icon.svg" WidthRequest="15" HeightRequest="15"/>
-                                </HorizontalStackLayout>
-                                <HorizontalStackLayout Margin="0,0,0,28">
-                                        <Image Source="ustadz.png" WidthRequest="60" Margin="0,0,12,0" HeightRequest="60" />
-                                        <VerticalStackLayout>
-                                                <StackLayout Margin="0,0,0,10">
-                                                        <Label Text="Dalene Robertson" FontFamily="Nunito" FontSize="18"
-                                                                FontAttributes="Bold" />
-                                                        <Label Text="Selesai Mengaji" FontFamily="Nunito" FontSize="14" />
-                                                </StackLayout>
-                                                <Label Text="Sabtu, 3 Apr 2021  •  13:00 PM " FontFamily="Nunito"
-                                                        TextColor="#88984A" />
-                                        </VerticalStackLayout>
-                                        <ImageButton Source="icon.svg" WidthRequest="15" HeightRequest="15"/>
-                                </HorizontalStackLayout>
-                                <HorizontalStackLayout Margin="0,0,0,28">
-                                        <Image Source="ustadz.png" WidthRequest="60" Margin="0,0,12,0" HeightRequest="60" />
-                                        <VerticalStackLayout>
-                                                <StackLayout Margin="0,0,0,10">
-                                                        <Label Text="Dalene Robertson" FontFamily="Nunito" FontSize="18"
-                                                                FontAttributes="Bold" />
-                                                        <Label Text="Selesai Mengaji" FontFamily="Nunito" FontSize="14" />
-                                                </StackLayout>
-                                                <Label Text="Sabtu, 3 Apr 2021  •  13:00 PM " FontFamily="Nunito"
-                                                        TextColor="#88984A" />
-                                        </VerticalStackLayout>
-                                        <ImageButton Source="icon.svg" WidthRequest="15" HeightRequest="15"/>
-                                </HorizontalStackLayout>
-                                <HorizontalStackLayout Margin="0,0,0,28">
-                                        <Image Source="ustadz.png" WidthRequest="60" Margin="0,0,12,0" HeightRequest="60" />
-                                        <VerticalStackLayout>
-                                                <StackLayout Margin="0,0,0,10">
-                                                        <Label Text="Dalene Robertson" FontFamily="Nunito" FontSize="18"
-                                                                FontAttributes="Bold" />
-                                                        <Label Text="Selesai Mengaji" FontFamily="Nunito" FontSize="14" />
-                                                </StackLayout>
-                                                <Label Text="Sabtu, 3 Apr 2021  •  13:00 PM " FontFamily="Nunito"
-                                                        TextColor="#88984A" />
-                                        </VerticalStackLayout>
-                                        <ImageButton Source="icon.svg" WidthRequest="15" HeightRequest="15"/>
-                                </HorizontalStackLayout>
-                                <HorizontalStackLayout Margin="0,0,0,28">
-                                        <Image Source="ustadz.png" WidthRequest="60" Margin="0,0,12,0" HeightRequest="60" />
-                                        <VerticalStackLayout>
-                                                <StackLayout Margin="0,0,0,10">
-                                                        <Label Text="Dalene Robertson" FontFamily="Nunito" FontSize="18"
-                                                                FontAttributes="Bold" />
-                                                        <Label Text="Selesai Mengaji" FontFamily="Nunito" FontSize="14" />
-                                                </StackLayout>
-                                                <Label Text="Sabtu, 3 Apr 2021  •  13:00 PM " FontFamily="Nunito"
-                                                        TextColor="#88984A" />
-                                        </VerticalStackLayout>
-                                        <ImageButton Source="icon.svg" WidthRequest="15" HeightRequest="15"/>
-                                </HorizontalStackLayout>
-                                <HorizontalStackLayout Margin="0,0,0,28">
-                                        <Image Source="ustadz.png" WidthRequest="60" Margin="0,0,12,0" HeightRequest="60" />
-                                        <VerticalStackLayout>
-                                                <StackLayout Margin="0,0,0,10">
-                                                        <Label Text="Dalene Robertson" FontFamily="Nunito" FontSize="18"
-                                                                FontAttributes="Bold" />
-                                                        <Label Text="Selesai Mengaji" FontFamily="Nunito" FontSize="14" />
-                                                </StackLayout>
-                                                <Label Text="Sabtu, 3 Apr 2021  •  13:00 PM " FontFamily="Nunito"
-                                                        TextColor="#88984A" />
-                                        </VerticalStackLayout>
-                                        <ImageButton Source="icon.svg" WidthRequest="15" HeightRequest="15"/>
-                                </HorizontalStackLayout>
-                                <HorizontalStackLayout Margin="0,0,0,28">
-                                        <Image Source="ustadz.png" WidthRequest="60" Margin="0,0,12,0" HeightRequest="60" />
-                                        <VerticalStackLayout>
-                                                <StackLayout Margin="0,0,0,10">
-                                                        <Label Text="Dalene Robertson" FontFamily="Nunito" FontSize="18"
-                                                                FontAttributes="Bold" />
-                                                        <Label Text="Selesai Mengaji" FontFamily="Nunito" FontSize="14" />
-                                                </StackLayout>
-                                                <Label Text="Sabtu, 3 Apr 2021  •  13:00 PM " FontFamily="Nunito"
-                                                        TextColor="#88984A" />
                                         </VerticalStackLayout>
                                         <ImageButton Source="icon.svg" WidthRequest="15" HeightRequest="15"/>
                                 </HorizontalStackLayout>
