--- a/View/Riwayat_Mengaji/RiwayatMengaji.xaml
+++ b/View/Riwayat_Mengaji/RiwayatMengaji.xaml
@@ -5,60 +5,80 @@
         <ScrollView>
                 <Grid RowDefinitions="*,auto">
                         <VerticalStackLayout Margin="20,10,10,20">
-                                <Label Text="Riwayat Mengaji" FontFamily="NunitoBlack" FontSize="28" Margin="0,0,0,28" />
+                                <Label Text="Riwayat Mengaji" FontFamily="NunitoBlack" FontSize="28"
+                                        Margin="0,0,0,28" />
                                 <HorizontalStackLayout Margin="0,0,0,28">
-                                        <Image Source="ustadz.png" WidthRequest="60" Margin="0,0,12,0" HeightRequest="60" />
-                                        <VerticalStackLayout>
-                                                <StackLayout Margin="0,0,0,10">
-                                                        <Label  Text="Dalene Robertson" FontFamily="Nunito" FontSize="18"
-                                                                FontAttributes="Bold" />
-                                                        <Label Text="Selesai Mengaji" FontFamily="Nunito" FontSize="14" />
-                                                </StackLayout>
-                                                <Label Text="Sabtu, 3 Apr 2021  •  13:00 PM " FontFamily="Nunito"
-                                                        TextColor="#88984A" />
-                                        </VerticalStackLayout>
-                                        <ImageButton Source="icon.svg" WidthRequest="15" HeightRequest="15"/>
-                                </HorizontalStackLayout>
-                                <HorizontalStackLayout Margin="0,0,0,28">
-                                        <Image Source="ustadz.png" WidthRequest="60" Margin="0,0,12,0" HeightRequest="60" />
+                                        <Image Source="ustadz.png" WidthRequest="60" Margin="0,0,12,0"
+                                                HeightRequest="60" />
                                         <VerticalStackLayout>
                                                 <StackLayout Margin="0,0,0,10">
                                                         <Label Text="Dalene Robertson" FontFamily="Nunito" FontSize="18"
                                                                 FontAttributes="Bold" />
-                                                        <Label Text="Selesai Mengaji" FontFamily="Nunito" FontSize="14" />
+                                                        <Label Text="Selesai Mengaji" FontFamily="Nunito"
+                                                                FontSize="14" />
                                                 </StackLayout>
                                                 <Label Text="Sabtu, 3 Apr 2021  •  13:00 PM " FontFamily="Nunito"
                                                         TextColor="#88984A" />
                                         </VerticalStackLayout>
-                                        <ImageButton Source="icon.svg" WidthRequest="15" HeightRequest="15"/>
+                                        <ImageButton Source="icon.svg" WidthRequest="15" HeightRequest="15" />
                                 </HorizontalStackLayout>
+                                <Border StrokeThickness="2" WidthRequest="325" StrokeShape="Line 300,0"
+                                        Background="#2B0B98" Padding="16,8" HorizontalOptions="Center" />
                                 <HorizontalStackLayout Margin="0,0,0,28">
-                                        <Image Source="ustadz.png" Opacity="0.5" WidthRequest="60" HeightRequest="60"  Margin="0,0,12,0" />
-                                        <VerticalStackLayout>
-                                                <StackLayout Margin="0,0,0,10">
-                                                        <Label Text="Dalene Robertson" FontFamily="Nunito" FontSize="18"
-                                                                FontAttributes="Bold" TextColor="#C0C0C0"/>
-                                                        <Label Text="Pembayaran Kadaluarsa" FontFamily="Nunito" TextColor="#C0C0C0" FontSize="14" />
-                                                </StackLayout>
-                                                <Label Text="Sabtu, 3 Apr 2021  •  13:00 PM " FontFamily="Nunito"
-                                                        TextColor="#C0C0C0"/>
-                                        </VerticalStackLayout>
-                                        <ImageButton Source="icon.svg" WidthRequest="15" HeightRequest="15"/>
-                                </HorizontalStackLayout>
-                                <HorizontalStackLayout Margin="0,0,0,28">
-                                        <Image Source="ustadz.png" WidthRequest="60" Margin="0,0,12,0" HeightRequest="60" />
+                                        <Image Source="ustadz.png" WidthRequest="60" Margin="0,0,12,0"
+                                                HeightRequest="60" />
                                         <VerticalStackLayout>
                                                 <StackLayout Margin="0,0,0,10">
                                                         <Label Text="Dalene Robertson" FontFamily="Nunito" FontSize="18"
                                                                 FontAttributes="Bold" />
-                                                        <Label Text="Selesai Mengaji" FontFamily="Nunito" FontSize="14" />
+                                                        <Label Text="Selesai Mengaji" FontFamily="Nunito"
+                                                                FontSize="14" />
                                                 </StackLayout>
                                                 <Label Text="Sabtu, 3 Apr 2021  •  13:00 PM " FontFamily="Nunito"
                                                         TextColor="#88984A" />
                                         </VerticalStackLayout>
-                                        <ImageButton Source="icon.svg" WidthRequest="15" HeightRequest="15"/>
+                                        <ImageButton Source="icon.svg" WidthRequest="15" HeightRequest="15" />
                                 </HorizontalStackLayout>
-                                <Button Text="Kembali" BackgroundColor="#FFD53F" FontFamily="NunitoBlack" WidthRequest="300" TextColor="#313131" HeightRequest="56" FontSize="18" CornerRadius="50" HorizontalOptions="Fill" VerticalOptions="Center" Margin="0,28,0,28"/>
+                                <Border StrokeThickness="2" WidthRequest="325" StrokeShape="Line 300,0"
+                                        Background="#2B0B98" Padding="16,8" HorizontalOptions="Center" />
+                                <HorizontalStackLayout Margin="0,0,0,28">
+                                        <Image Source="ustadz.png" Opacity="0.5" WidthRequest="60" HeightRequest="60"
+                                                Margin="0,0,12,0" />
+                                        <VerticalStackLayout>
+                                                <StackLayout Margin="0,0,0,10">
+                                                        <Label Text="Dalene Robertson" FontFamily="Nunito" FontSize="18"
+                                                                FontAttributes="Bold" TextColor="#C0C0C0" />
+                                                        <Label Text="Pembayaran Kadaluarsa" FontFamily="Nunito"
+                                                                TextColor="#C0C0C0" FontSize="14" />
+                                                </StackLayout>
+                                                <Label Text="Sabtu, 3 Apr 2021  •  13:00 PM " FontFamily="Nunito"
+                                                        TextColor="#C0C0C0" />
+                                        </VerticalStackLayout>
+                                        <ImageButton Source="icon.svg" WidthRequest="15" HeightRequest="15" />
+                                </HorizontalStackLayout>
+                                <Border StrokeThickness="2" WidthRequest="325" StrokeShape="Line 300,0"
+                                        Background="#2B0B98" Padding="16,8" HorizontalOptions="Center" />
+                                <HorizontalStackLayout Margin="0,0,0,28">
+                                        <Image Source="ustadz.png" WidthRequest="60" Margin="0,0,12,0"
+                                                HeightRequest="60" />
+                                        <VerticalStackLayout>
+                                                <StackLayout Margin="0,0,0,10">
+                                                        <Label Text="Dalene Robertson" FontFamily="Nunito" FontSize="18"
+                                                                FontAttributes="Bold" />
+                                                        <Label Text="Selesai Mengaji" FontFamily="Nunito"
+                                                                FontSize="14" />
+                                                </StackLayout>
+                                                <Label Text="Sabtu, 3 Apr 2021  •  13:00 PM " FontFamily="Nunito"
+                                                        TextColor="#88984A" />
+                                        </VerticalStackLayout>
+                                        <ImageButton Source="icon.svg" WidthRequest="15" HeightRequest="15" />
+                                </HorizontalStackLayout>
+                                <Border StrokeThickness="2" WidthRequest="325" StrokeShape="Line 300,0"
+                                        Background="#2B0B98" Padding="16,8" HorizontalOptions="Center" />
+                                <Button Text="Kembali" BackgroundColor="#FFD53F" FontFamily="NunitoBlack"
+                                        WidthRequest="300" TextColor="#313131" HeightRequest="56" FontSize="18"
+                                        CornerRadius="50" HorizontalOptions="Fill" VerticalOptions="Center"
+                                        Margin="0,28,0,28" />
                         </VerticalStackLayout>
                 </Grid>
         </ScrollView>
