--- a/View/Riwayat_Mengaji/RiwayatMengaji.xaml
+++ b/View/Riwayat_Mengaji/RiwayatMengaji.xaml
@@ -2,9 +2,9 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
         xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:ngaji_yukk"
         x:Class="ngaji_yukk.View.Riwayat_Mengaji.RiwayatMengaji" Title="Riwayat Mengaji" Shell.NavBarIsVisible="false">
-        <ScrollView>
-                <Grid RowDefinitions="*,auto">
-                        <VerticalStackLayout Margin="20,10,10,20">
+        <Grid RowDefinitions="*,Auto">
+                <ScrollView VerticalOptions="FillAndExpand">
+                        <VerticalStackLayout Margin="20,20,20,20">
                                 <Label Text="Riwayat Mengaji" FontFamily="NunitoBlack" FontSize="28"
                                         Margin="0,0,0,28" />
                                 <HorizontalStackLayout Margin="0,0,0,28">
@@ -75,11 +75,10 @@
                                 </HorizontalStackLayout>
                                 <Border StrokeThickness="2" WidthRequest="325" StrokeShape="Line 300,0"
                                         Background="#2B0B98" Padding="16,8" HorizontalOptions="Center" />
-                                <Button Text="Kembali" BackgroundColor="#FFD53F" FontFamily="NunitoBlack"
-                                        WidthRequest="300" TextColor="#313131" HeightRequest="56" FontSize="18"
-                                        CornerRadius="50" HorizontalOptions="Fill" VerticalOptions="Center"
-                                        Margin="0,28,0,28" />
                         </VerticalStackLayout>
-                </Grid>
-        </ScrollView>
+                </ScrollView>
+                <Button Grid.Row="1" Text="Kembali" BackgroundColor="#FFD53F" FontFamily="NunitoBlack"
+                        WidthRequest="300" TextColor="#313131" HeightRequest="56" FontSize="18" CornerRadius="50"
+                        HorizontalOptions="Fill" VerticalOptions="Center" Margin="0,28,0,28" />
+        </Grid>
 </ContentPage>
