--- a/View/Riwayat_Mengaji/RiwayatMengaji.xaml
+++ b/View/Riwayat_Mengaji/RiwayatMengaji.xaml
@@ -2,11 +2,13 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
         xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:ngaji_yukk"
         x:Class="ngaji_yukk.View.Riwayat_Mengaji.RiwayatMengaji" Title="Riwayat Mengaji" Shell.NavBarIsVisible="false">
-        <Grid RowDefinitions="*,Auto">
-                <ScrollView VerticalOptions="FillAndExpand">
-                        <VerticalStackLayout Margin="20,20,20,20">
-                                <Label Text="Riwayat Mengaji" FontFamily="NunitoBlack" FontSize="28"
-                                        Margin="0,0,0,28" />
+        <Grid RowDefinitions="Auto,*,Auto" Margin="20,20,20,20">
+                <Label  Text="Riwayat Mengaji"
+                        FontFamily="NunitoBlack" 
+                        FontSize="28"
+                        Margin="0,0,0,28" />
+                <ScrollView VerticalOptions="FillAndExpand" Grid.Row="1">
+                        <VerticalStackLayout>
                                 <HorizontalStackLayout Margin="0,0,0,28">
                                         <Image Source="ustadz.png" WidthRequest="60" Margin="0,0,12,0"
                                                 HeightRequest="60" />
@@ -77,7 +79,7 @@
                                         Background="#2B0B98" Padding="16,8" HorizontalOptions="Center" />
                         </VerticalStackLayout>
                 </ScrollView>
-                <Button Grid.Row="1" Text="Kembali" BackgroundColor="#FFD53F" FontFamily="NunitoBlack"
+                <Button Grid.Row="2" Text="Kembali" BackgroundColor="#FFD53F" FontFamily="NunitoBlack"
                         WidthRequest="300" TextColor="#313131" HeightRequest="56" FontSize="18" CornerRadius="50"
                         HorizontalOptions="Fill" VerticalOptions="Center" Margin="0,28,0,28" />
         </Grid>
